# tech-challenge-fase-03

./: .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
api/: app.py  database.db  database.py  models.py  passos alembic.txt  pyproject.toml  routers.py  schemas.py
api/migrations/: env.py
api/migrations/versions/: 74fe91afd964_create_houses_table.py
db/: database.db
frontend/: analysis.py  app.py  db_connection.py  predict.py
migrations/: env.py
migrations/versions/: 62b5e1de5d45_create_houses_table.py
notebook/: analise_dados.ipynb  analise_exploratira.ipynb  modelagem.ipynb  testar_api.ipynb  teste_grafico.ipynb
pdf/: apresentacao.md
